--- a/WebApiTask/appsettings.json
+++ b/WebApiTask/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TaskManagerDB": "Server=HOMER\\SQLEXPRESS;Database=TaskManagerDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;TrustServerCertificate=False"
+
+  }
 }
