Revert "Base del crud funcionando bien"
This reverts commit 1f4b74487cd36b37d7b4fa666ed30d19f47c598f.

--- a/WebApiTask/appsettings.json
+++ b/WebApiTask/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "TaskManagerDB": "Server=HOMER\\SQLEXPRESS;Database=TaskManagerDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;TrustServerCertificate=False"
-
-  }
+  "AllowedHosts": "*"
 }
