--- a/ApplicationLayer/ApplicationLayer.csproj
+++ b/ApplicationLayer/ApplicationLayer.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
     <PackageReference Include="System.Reactive" Version="6.0.1" />
   </ItemGroup>
 
