--- a/WebApiTask/appsettings.json
+++ b/WebApiTask/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     "TaskManagerDB": "Server=HOMER\\SQLEXPRESS;Database=TaskManagerDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;TrustServerCertificate=False"
 
+  },
+  "Jwt": {
+    "Key": "CLAVE-SUPER-SECRETA-LARGA-123456789",
+    "Issuer": "TaskApi",
+    "Audience": "TaskApiUsers",
+    "ExpireMinutes": 60
   }
+
 }
